<resources>
    <string name="app_name">OpenPayFit</string>
    <string name="title_profile">Profile</string>
    <string name="title_movies">Movies</string>
    <string name="title_map">Map</string>
    <string name="title_images">Images</string>

    <string name="loading">Loading</string>
    <string name="close">Close</string>
    <string name="save">Save</string>
    <string name="see_more">See more</string>
    <string name="see_less">See less</string>

    <string name="error_dialog_default_title">Oops! Something got wrong</string>
    <string name="error_dialog_default_message">Please, review your network connection and try again</string>

    <string name="popular_person_image_content_description">Popular person image</string>
    <string name="popularity_image_content_description">Popularity image</string>
    <string name="id"># %1$s</string>
    <string name="known_for_list">Best known for:</string>

    <string name="popular_movie_list">Popular movies:</string>
    <string name="top_rated_movie_list">Top rated movies:</string>
    <string name="recommended_movie_list">Movies recommended by %1$s:</string>

    <string name="image_preview_content_description">Image preview</string>
    <string name="images_tab_subtitle">Take image from:</string>
    <string name="images_tab_camera_button">Camera</string>
    <string name="images_tab_gallery_button">Gallery</string>
    <string name="images_tab_image_counts">Images selected: %1$s</string>
    <string name="images_tab_clear_content_description">Clear</string>
    <string name="images_saved_toast">Images saved correctly!</string>
    <string name="gallery_intent_title">Select image</string>

    <string name="empty_state_image_content_description">Empty state image</string>
    <string name="empty_state_text">There is not info to show..</string>
</resources>
