<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.sartimau.openpayfit.viewmodel.ImagesViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragment.ImagesFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin_10">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_weight="1"
                android:scrollbars="vertical"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/subtitle"
                style="@style/subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/images_tab_subtitle"
                app:layout_constraintTop_toBottomOf="@id/recycler" />

            <Button
                android:id="@+id/camera_button"
                style="@style/commonButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_15"
                android:layout_marginTop="@dimen/margin_10"
                android:text="@string/images_tab_camera_button"
                app:layout_constraintTop_toBottomOf="@id/subtitle" />

            <Button
                android:id="@+id/gallery_button"
                style="@style/commonButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_15"
                android:layout_marginTop="@dimen/margin_10"
                android:text="@string/images_tab_gallery_button"
                app:layout_constraintTop_toBottomOf="@id/camera_button" />

            <TextView
                android:id="@+id/image_count"
                style="@style/subtitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_10"
                android:gravity="start"
                android:text="@string/images_tab_image_counts"
                app:layout_constraintBottom_toTopOf="@id/save_button"
                app:layout_constraintEnd_toStartOf="@id/clear"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/clear"
                android:layout_width="@dimen/popularity_star_size"
                android:layout_height="@dimen/popularity_star_size"
                android:contentDescription="@string/images_tab_clear_content_description"
                android:src="@drawable/ic_baseline_delete_forever_24"
                app:layout_constraintBottom_toBottomOf="@id/image_count"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/image_count" />

            <Button
                android:id="@+id/save_button"
                style="@style/commonButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_15"
                android:text="@string/save"
                app:layout_constraintBottom_toBottomOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <include
            android:id="@+id/loader"
            layout="@layout/loading_screen"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="@{viewModel.isLoading() ? View.VISIBLE : View.GONE}" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
