<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/profile_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/margin_15"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/card_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/show_image"
                        android:layout_width="@dimen/card_image_width"
                        android:layout_height="@dimen/card_image_height"
                        android:contentDescription="@string/popular_person_image_content_description"
                        android:src="@mipmap/movie_placeholder"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/show_id"
                        style="@style/cardId"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="@id/popularity_container"
                        app:layout_constraintStart_toEndOf="@id/show_image"
                        app:layout_constraintTop_toTopOf="@id/popularity_container"
                        tools:text="# 9292" />

                    <LinearLayout
                        android:id="@+id/popularity_container"
                        style="@style/cardShowPopularity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="@dimen/popularity_star_size"
                            android:layout_height="@dimen/popularity_star_size"
                            android:contentDescription="@string/popularity_image_content_description"
                            android:src="@mipmap/star" />

                        <TextView
                            android:id="@+id/show_popularity"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/margin_10"
                            android:layout_marginEnd="@dimen/margin_10"
                            android:textColor="@color/blue_movie"
                            tools:text="8.6" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/show_name"
                        style="@style/cardTitle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/card_title_text_size_small"
                        app:layout_constraintBottom_toTopOf="@id/show_overview"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/show_image"
                        app:layout_constraintTop_toBottomOf="@id/popularity_container"
                        tools:text="Show name" />

                    <TextView
                        android:id="@+id/show_overview"
                        style="@style/cardShowOverview"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/show_image"
                        app:layout_constraintTop_toBottomOf="@id/show_name"
                        tools:text="Show overview" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:background="@color/blue_movie"
                    android:layout_weight="1"
                    android:nestedScrollingEnabled="true"
                    android:padding="@dimen/margin_20"
                    android:scrollbars="vertical"
                    android:visibility="gone"
                    tools:listitem="@layout/card_show" />

                <TextView
                    android:id="@+id/expandable_text"
                    style="@style/cardSeeMore"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/see_more" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</layout>
